# OpenSAK

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PRIVACY_POLICY.md  README.md  features.json  opensak.spec  pyproject.toml
.github/: dependabot.yml
.github/actions/setup-qt/: action.yml
.github/workflows/: build.yml  ci.yml  data-integrity.yml  deploy-site.yml  generate-boundaries.yml  notify-linked-issues.yml  quality.yml  screenshots.yml  tests.yml
architecture/: reverse-geocoding.md
docs/: Uninstalling-OpenSAK.md  feature-flags.md  getting-started.md  installation.md  opensak-user-guide.html  reverse-geocoding-data.md  update-location.md
docs/architecture/: distance-computation.md
plans/: reverse-geocoding-data-migration.md  reverse-geocoding.md
scripts/: bump_version.py  fetch_boundary_baseline.py  filter_demo.py  import_gsak.py  install-opensak.sh
site/: PRIVACY_POLICY.html  index.html  user-guide.html
src/opensak/: __init__.py  app.py  config.py  coords.py  debug_flags.py  geocoder.py  hint_detect.py  logger.py  settings_store.py  updater.py
src/opensak/api/: geocaching.py
src/opensak/db/: database.py  found_updater.py  manager.py  models.py
src/opensak/export/: kml.py
src/opensak/filters/: engine.py
src/opensak/geo/: __init__.py  boundaries.py  packs.py  store.py
src/opensak/gps/: garmin.py
src/opensak/gui/: cache_detail.py  cache_table.py  icon_provider.py  mainwindow.py  map_widget.py  org_cache_detail.py  settings.py  theme.py
src/opensak/importer/: __init__.py  gsak_importer.py
src/opensak/lang/: __init__.py  (+8 more)
tests/: conftest.py  data.py
tests/e2e-tests/: conftest.py  test_e2e_cache_detail.py  test_e2e_corrected_coords.py  test_e2e_db_combo.py  test_e2e_db_manager.py  test_e2e_export_reload.py  test_e2e_filter.py  test_e2e_gps_export.py  test_e2e_import.py  test_e2e_mainwindow.py  test_e2e_reverse_geocoding.py  test_e2e_tools.py  test_e2e_trip_planner.py  test_monkey.py
tests/screenshots/: conftest.py  demo_data.py  test_capture_screenshots.py
tests/unit-tests/: conftest.py  test_app.py  test_app_settings.py  test_bump_version_script.py  test_cache_detail.py  test_cache_table.py  test_column_dialog.py  test_config.py  test_container_sort.py  test_coords.py  test_corrected_coords_dialog.py  test_database_dialog.py  test_db.py  test_db_manager.py  test_debug_flags.py  test_dialogs.py  test_distance.py  test_doctor.py  test_entrypoints.py  test_export_dialogs.py  test_export_import_roundtrip.py  test_export_init.py  test_filter_dialog.py  test_filter_sql_parity.py  test_filters.py  test_flags.py  test_found_dialog.py  test_found_updater.py  test_garmin.py  test_geo.py  test_geocaching_api.py  test_geocoder.py  test_geocoder_deps.py  test_gps_dialog.py  test_gsak_corrected_coords.py  test_gsak_importer.py  test_gsak_to_opensak.py  test_gsak_user_note.py  test_hint_detect.py  test_icon.py  (+31 more)
tools/boundaries/: gsak_to_opensak.py  verify_release.py
(+20 files in other folders)
