[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opensak"
version = "1.13.11"
description = "OpenSAK — Open Source geocaching management tool (GSAK successor)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "lxml>=5.0",
    "PySide6>=6.6",
    "reverse_geocoder>=1.5",
    "pycountry>=23.12",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "pytest-qt>=4.0",
    "mypy>=1.8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests/unit-tests", "tests/e2e-tests"]
pythonpath = ["src", "."]
addopts = "--import-mode=importlib"
markers = [
    "gui: tests that require a display and pytest-qt",
]

# Whole package is type-checked except gui/, which is tracked separately.
[tool.mypy]
files = ["src/opensak"]
exclude = ["src/opensak/gui/"]
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true
python_version = "3.11"
follow_imports = "silent"
ignore_missing_imports = true

[project.scripts]
opensak = "opensak.utils.run_cli:main"
opensak-test = "opensak.utils.run_test:run"
opensak-doctor = "opensak.utils.doctor:run"