[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opensak"
version = "1.14.0-beta.6"
description = "OpenSAK — Open Source geocaching management tool (GSAK successor)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "lxml>=5.0",
    "PySide6>=6.6",
    "numpy>=1.24",
    "certifi>=2024.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "pytest-qt>=4.0",
    "mypy>=1.8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests/unit-tests", "tests/e2e-tests"]
pythonpath = ["src", "."]
addopts = "--import-mode=importlib"
markers = [
    "gui: tests that require a display and pytest-qt",
]

# The whole repo is type-checked: package, entry point, scripts and tests.
[tool.mypy]
files = ["src/opensak", "run.py", "scripts", "tests"]
# The hyphenated test dirs can't be packages, so the two suite-level
# conftest.py files both map to module "conftest". Exclude the e2e one here to
# break the clash; it is type-checked on its own in the quality workflow.
exclude = ["tests/e2e-tests/conftest.py"]
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true
python_version = "3.11"
follow_imports = "silent"
ignore_missing_imports = true

[project.scripts]
opensak = "opensak.utils.run_cli:main"
opensak-test = "opensak.utils.run_test:run"
opensak-doctor = "opensak.utils.doctor:run"